--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
     <section class="main-section">
       <h1>About Me</h1>
 
-      <img src="assets/images/cat.jpg" class="auth-image" alt="Your Name">
+      <img src="assets/images/xyw-we.jpg" class="auth-image" alt="Xiaoying Wen">
 
-      <p>Marshmallow jelly souffl&eacute; pastry biscuit gummi bears tootsie roll tootsie roll gingerbread. Cotton candy muffin gingerbread fruitcake. Sweet roll souffl&eacute; topping wafer croissant oat cake gummi&nbsp;bears.</p>
+      <p>Xiaoying Wen has been working as a middleware developer for many years.  After been promoted to manage the IT development team, she realized though spending much less time on coding she needs to have a more broader knowledge and keep on top of cutting-edge technology.  So here she is, a student of Rutgers Coding Bootcamp class.</p>
 
-      <p>Jelly-o cheesecake dessert fruitcake ice cream brownie liquorice souffl&eacute;. Caramels biscuit gummi bears tiramisu chupa chups. Croissant macaroon cotton candy cake pudding.</p>
+      <p>When she isn’t coding, she loves to explore nature, work in her garden (gardenia being one of her favorite flowers), and travel with families.</p>
 
     </section>
 
@@ -38,16 +38,16 @@
       <div id="connect">
         <h2>Connect with Me</h2>
 
-        <a href="#"><img src="assets/images/github-128.png" class="social" alt="GitHub" /></a>
-        <a href="#"><img src="assets/images/linkedin-128.png" class="social" alt="LinkedIn" /></a>
-        <a href="#"><img src="assets/images/stackoverflow-128.png" class="social" alt="Stack Overflow" /></a>
+           <a href="https://github.com/XiaoyingWen" target="_blank"><img src="assets/images/github-128.png" class="social" alt="GitHub" /></a>
+            <a href="http://www.linkedin.com/in/xiaoying-wen-b128a54" target="_blank"><img src="assets/images/linkedin-128.png" class="social" alt="LinkedIn" /></a>
+            <a href="http://stackexchange.com/users/10506442/helen" target="_blank"><img src="assets/images/stackoverflow-128.png" class="social" alt="Stack Overflow" /></a>
       </div>
     </section>
   </div>
 
   <footer>
     <div class="container">
-      Copyright &copy; 2016 Your Name
+      Copyright &copy; 2017 Xiaoying Wen
     </div>
   </footer>
 </body>
