--- a/portfolio.html
+++ b/portfolio.html
@@ -58,16 +58,16 @@
       <div id="connect">
         <h2>Connect with Me</h2>
 
-        <a href="#"><img src="assets/images/github-128.png" class="social" alt="GitHub" /></a>
-        <a href="#"><img src="assets/images/linkedin-128.png" class="social" alt="LinkedIn" /></a>
-        <a href="#"><img src="assets/images/stackoverflow-128.png" class="social" alt="Stack Overflow" /></a>
+           <a href="https://github.com/XiaoyingWen" target="_blank"><img src="assets/images/github-128.png" class="social" alt="GitHub" /></a>
+            <a href="http://www.linkedin.com/in/xiaoying-wen-b128a54" target="_blank"><img src="assets/images/linkedin-128.png" class="social" alt="LinkedIn" /></a>
+            <a href="http://stackexchange.com/users/10506442/helen" target="_blank"><img src="assets/images/stackoverflow-128.png" class="social" alt="Stack Overflow" /></a>
       </div>
     </section>
   </div>
 
   <footer>
     <div class="container">
-      Copyright &copy; 2016 Your Name
+      Copyright &copy; 2017 Xiaoying Wen
     </div>
   </footer>
 </body>
